@@ -1,3 +1,5 @@
+* Add resources method to ModelStorage
+
 Version 4.8.4 - 2018-08-20
 * Bug fixes (see mercurial logs for details)
 
